--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 <style type="text/css">
 body {
   font-family: georgia;
@@ -195,7 +195,7 @@ p {
 </div>
 
   <p/>
-  <iframe width="280" height="280" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;om=0&amp;s=AARTsJoSvXj99dDoRHY3mGzZyCpOv9Dnfw&amp;msa=0&amp;msid=114156874865734474770.0004452cdbff3afc30f6b&amp;ll=38.284817,-104.617481&amp;spn=0.037728,0.048065&amp;z=13&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;om=0&amp;msa=0&amp;msid=114156874865734474770.0004452cdbff3afc30f6b&amp;ll=38.284817,-104.617481&amp;spn=0.037728,0.048065&amp;z=13&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+  <iframe width="280" height="280" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;om=0&amp;s=AARTsJoSvXj99dDoRHY3mGzZyCpOv9Dnfw&amp;msa=0&amp;msid=114156874865734474770.0004452cdbff3afc30f6b&amp;ll=38.284817,-104.617481&amp;spn=0.037728,0.048065&amp;z=13&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;om=0&amp;msa=0&amp;msid=114156874865734474770.0004452cdbff3afc30f6b&amp;ll=38.284817,-104.617481&amp;spn=0.037728,0.048065&amp;z=13&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 
 
   </div>
@@ -224,7 +224,7 @@ p {
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script type="text/javascript" 
-src="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>  
+src="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>  
 <script type="text/javascript">
 var gaJsHost=(("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='"+gaJsHost+"google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
